# fa2013_robotics

arduino/csci445_team13_monday/: csci445_team13_lab6.ino
arduino/finalProject/: finalProject.ino
arduino/libraries/DCMotor/: DCMotor.cpp  DCMotor.h
arduino/libraries/IRSensor/: IRSensor.cpp  IRSensor.h
arduino/libraries/MotorController/: MotorController.cpp
arduino/libraries/PingSensor/: PingSensor.cpp  PingSensor.h
arduino/libraries/Robot/: Robot.cpp  Robot.h
arduino/old/libraries/DCMotor/: DCMotor.cpp  DCMotor.h
arduino/old/libraries/IRSensor/: IRSensor.cpp
arduino/old/libraries/MotorController/: MotorController.cpp  MotorController.h
arduino/old/libraries/PID-Control/: PIDControl.cpp  PIDControl.h
arduino/old/libraries/PingSensor/: PingSensor.cpp  PingSensor.h
arduino/old/libraries/Robot/: Robot.cpp  Robot.h
particle-filter/ParticleFilterSimulation/: KeyNames.java  Particle.pde  ParticleFilterSimulation.pde  PersistentLine.pde  Utils.pde
raspberrypi/Arduino/: CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Vision.h  mainOG.cpp  vision.cpp
raspberrypi/Color/: CMakeLists.txt  camcv.cpp
raspberrypi/Final/src/: Agent.cpp  Robot.cpp  Robot.h
raspberrypi/Final/src/actuators/DCMotor/: DCMotor.cpp  DCMotor.h
raspberrypi/Final/src/actuators/ServoMotor/: ServoMotor.cpp  ServoMotor.h
raspberrypi/Final/src/sensors/SonarSensor/: SonarSensor.cpp  SonarSensor.h
raspberrypi/backup/Desktop/Desktop/Clayton/IPEmailer/: IPEmailer.py  IPEmailer.py.save  current_ip.txt
raspberrypi/backup/Desktop/Desktop/Robot/Arduino/: CMakeCache.txt  arduino  cmake_install.cmake  sampleConnect.cpp
raspberrypi/backup/Desktop/Desktop/Robot/Color/: CMakeCache.txt  Color  Makefile  camcv.cpp  cmake_install.cmake
raspberrypi/backup/Desktop/Desktop/Robot/Color/arduino/: CMakeCache.txt  CMakeLists.txt  Makefile  arduino  cmake_install.cmake  sampleConnect.cpp
raspberrypi/backup/Desktop/Desktop/Robot/Final/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
raspberrypi/backup/Desktop/Desktop/Robot/Final/mapping/: CMakeCache.txt  CMakeLists.txt  Makefile  Util.h  cmake_install.cmake  drawMap.cpp  map.txt
raspberrypi/backup/Desktop/Desktop/Robot/Final/src/: Agent.cpp
raspberrypi/backup/Desktop/Desktop/Robot/Final/src/actuators/DCMotor/: DCMotor.cpp
raspberrypi/backup/Desktop/Desktop/Robot/Final/src/sensors/SonarSensor/: SonarSensor.cpp  SonarSensor.h
raspberrypi/backup/Desktop/Desktop/Robot/RobotVision/: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  RobotVision  cmake_install.cmake  main.cpp
raspberrypi/backup/Desktop/Desktop/Robot/tests/: README.txt  ServoMotor.cpp
raspberrypi/backup/Desktop/Desktop/Robot/tests/DCMotor/: CMakeCache.txt  CMakeLists.txt  DCMotor  DCMotor.cpp  Makefile  cmake_install.cmake
raspberrypi/backup/Desktop/Desktop/Robot/tests/SonarSensor/: SonarSensor.cpp
raspberrypi/backup/Desktop/Desktop/Robot/wiringPi-f18c8f7/examples/: pwm  pwm.c  servo.c
raspberrypi/tests/: Makefile
raspberrypi/tests/ServoMotor/: CMakeLists.txt
raspberrypi/tests/SonarSensor/: CMakeLists.txt
